# wally

./: .gitignore  Cargo.toml  README.md  alternate.md  build.rs  oof.txt  wayland.xml  wrapper.h
assets/: left_ptr.conf  shader.frag  shader.vert
src/: backend.rs  behavior.rs  compositor.rs  ffi.rs  geometry.rs  input.rs  logind.rs  main.rs  math.rs  renderer.rs  wl.rs
src/backend/: drm.rs  easy_shm.rs  headless.rs  libinput.rs  vulkan.rs  window.rs  winit.rs
src/behavior/: client.rs  input.rs  window.rs
src/compositor/: client.rs  compositor.rs  data_device.rs  output.rs  role.rs  seat.rs  shell.rs  shm.rs  subcompositor.rs  surface.rs  xdg.rs
src/renderer/: present.rs
src/renderer/present/: drm.rs  vk_display.rs  winit.rs
src/wl/: server.rs
