[package]
name = "wally"
version = "0.1.0"
authors = ["IntrepidPig <bennycaguilera@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.20.0"
# use_system_lib is not compatible with winit
#wayland-server = { version = "0.25", features = ["use_system_lib"] }
wayland-server = { version = "0.25" }
wayland-protocols = { version = "0.25", features = ["server", "unstable_protocols"] }
#wayland-protocols = { version = "0.24.1", features = ["server"] }
calloop = "0.4.4"
log = "0.4.8"
fern = "0.5.9"
thiserror = "1.0.9"
memmap = "0.7.0"
crossbeam = "0.7.3"
input = "0.4.1"
libc = "0.2.66"
nix = "^0.17.0"
dbus = "0.8.1"
udev = "0.2.0"
mio = "0.6.21"
drm = "0.3.4"
gbm = { version = "0.5.0", default-features = false, features = ["drm-support"] }
shared_library = "0.1.9"
raw-window-handle = "0.3.3"
nalgebra = "0.19.0"
image = "0.23.0"
xkbcommon = "0.4.0"
tempfile = "3.1.0"
clap = "2.33.0"
structopt = "0.3.9"
#smithay-client-toolkit = "0.7.0"
festus = { path = "../festus", features = ["winit"] }
quick-xml = "0.18.1"
bitflags = "1.2.1"
byteorder = "1.3.4"
graph_storage = { path = "../../graph_storage" }

[build-dependencies]
bindgen = "0.52.0"