[package]
name = "wally"
version = "0.1.0"
authors = ["IntrepidPig <bennycaguilera@gmail.com>"]
edition = "2018"

[dependencies]
wl_server = { path = "../../wl/wl_server" }
wl_protocols = { path = "../../wl/wl_protocols" }

winit = "0.22.0"
#wayland-server = { version = "0.27" }
#wayland-protocols = { version = "0.27", features = ["server", "unstable_protocols"] }
calloop = "0.4.4"
log = "0.4.8"
fern = { version = "0.5.9", features = ["colored"] }
thiserror = "1.0.9"
memmap = "0.7.0"
crossbeam = "0.7.3"
input = "0.4.1"
libc = "0.2.66"
nix = "^0.17.0"
dbus = "0.8.1"
udev = "0.2.0"
mio = "0.6.21"
drm = "=0.3.3"
gbm = { version = "0.5.0", default-features = false, features = ["drm-support"] }
shared_library = "0.1.9"
raw-window-handle = "0.3.3"
nalgebra = "0.19.0"
image = "0.23.0"
xkbcommon = "0.4.0"
tempfile = "3.1.0"
clap = "2.33.0"
structopt = "0.3.9"
festus = { path = "../festus", features = ["winit"] }
quick-xml = "0.18.1"
bitflags = "1.2.1"
byteorder = "1.3.4"
graph_storage = { path = "../../graph_storage" }
loaner = { path = "../../loaner" }
once_cell = "1.4.1"

[build-dependencies]
bindgen = "0.52.0"
